--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# PNG files
+*.png
+*.tar.gz
+*.zip
+# *.pt
+
+autoreg_reconstruction/
+teacher_forcing_reconstruction/
